# ufazGameOfLife

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  game.c  game.h  game_test.c  main  main.c  print_to_console.c  print_to_console.h
.github/workflows/: cunits.yaml
buildCMake/: CMakeCache.txt  Makefile  cmake_install.cmake  ufazGameOfLife
console/: CMakeLists.txt  print_to_console.c  print_to_console.h
game/: CMakeLists.txt  Makefile  game.c  game.h  game_test.c
sdl2_print/: CMakeLists.txt  print_to_sdl.c  print_to_sdl.h
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  game.c  game.h  main.c  print_to_console.c  print_to_console.h  print_to_sdl.c  print_to_sdl.h  ufazGameOfLife
src/console/: CMakeLists.txt  Makefile  cmake_install.cmake  print_to_console.c  print_to_console.h
src/game/: CMakeLists.txt  Makefile  cmake_install.cmake
